--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,9 @@ atlassian*
 /app/config_sandbox
 /app/etc/config.php
 /app/etc/env.php
+/app/etc/di.xml
 /app/code/Magento/TestModule*
+/app/bootstrap.php
 /lib/internal/flex/uploader/.actionScriptProperties
 /lib/internal/flex/uploader/.flexProperties
 /lib/internal/flex/uploader/.project
